@@ -1,6 +1,7 @@
 2015-05-04  Jean Delvare  <jdelvare@suse.de>
 
 	* dmidecode.c: Move table decoding to a separate function.
+	* dmidecode.c: Simplify function dmi_table_dump.
 
 2015-04-28  Jean Delvare  <jdelvare@suse.de>
 
